# t_online-idea

./: README.md  index.html  pyproject.toml  tz_Django.docx
autoru_catalog/: db.sqlite3
autoru_catalog/autoru_catalog/: admin.py  apps.py  models.py  serializers.py  views.py
autoru_catalog/conf/: settings.py  urls.py
